[package]
name = "kaworu"
version = "0.1.2"
edition = "2024"
rust-version = "1.93"
description = "Config file manager"
readme = "README.md"
license = "MIT"
repository = "https://github.com/pawbies/kaworu"
keywords = ["cli", "symlink", "config"]
categories = ["command-line-utilities"]

[profile.release]
opt-level = 3
lto = "thin"
strip = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
shellexpand = "3"
toml = "0.9"
